# lapp

./: CMakeLists.txt  README.md
src/: mat.h  matops.h  vec.h  vecops.h
tests/: MatOperatorCompareEquality_GivenEqualMatrices_ReturnsTrue.cpp  MatOperatorCompareEquality_GivenUnequalMatrices_ReturnsFalse.cpp  MatOperatorCompareInequality_GivenEqualMatrices_ReturnsFalse.cpp  MatOperatorCompareInequality_GivenUnequalMatrices_ReturnsTrue.cpp  MatOperatorIndex_GivenValidInput_ChangesMatrixCorrectly.cpp  MatOperatorIndex_GivenValidMatrix_RetrunsCorrectValue.cpp  MatSolveLinearSystemInPlace_GivenCorrectInput_SolvesCorrectly.cpp  MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne.cpp  MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow.cpp  MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow.cpp  MatopsRmi_GivenValidInput_ReturnsCorrectIndex.cpp  MatopsSolveLinearSystemInPlaceWithGaussianElimination_GivenCorrectInput_SolvesCorrectly.cpp  MatopsSwapRows_GivenCorrectInput_SwapsRowsCorrectly.cpp  MatopsTransformInPlaceToUnreducedRowEchelonForm_GivenCorrectInput_TransformsCorrectly.cpp  VecDot_GivenCorrectInput_DotsVectorsCorrectly.cpp  VecOperatorCompareEquality_GivenEqualVectors_ReturnsTrue.cpp  VecOperatorCompareEquality_GivenUnequalVectors_ReturnsFalse.cpp  VecOperatorCompareInequality_GivenEqualVectors_ReturnsFalse.cpp  VecOperatorCompareInequality_GivenUnequalVectors_ReturnsTrue.cpp  VecOperatorMinusEquals_GivenCorrectInput_SubtractsVectorsCorrectly.cpp  VecOperatorMinus_GivenCorrectInput_SubtractsVectorsCorrectly.cpp  VecOperatorPlusEquals_GivenCorrectInput_AddsVectorsCorrectly.cpp  VecOperatorPlus_GivenCorrectInput_AddsVectorsCorrectly.cpp  VecOperatorScaleByReciprocalEquals_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecOperatorScaleByReciprocal_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecOperatorScaleEquals_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecOperatorScale_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecSqrLen_GivenCorrectInput_ReturnsCorrectValue.cpp  VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly.cpp  VecopsDot_GivenCorrectInput_DotsVectorsCorrectly.cpp  VecopsScaleByReciprocal_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecopsScale_GivenCorrectInput_ScalesVectorCorrectly.cpp  VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly.cpp
