cmake_minimum_required(VERSION 3.16.3)

project(lapp)

enable_testing()

add_executable(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly tests/VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly.cpp)
add_test(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly)

add_executable(VecopsDot_GivenCorrectInput_DotsVectorsCorrectly tests/VecopsDot_GivenCorrectInput_DotsVectorsCorrectly.cpp)
add_test(VecopsDot_GivenCorrectInput_AddsVectorsCorrectly VecopsDot_GivenCorrectInput_DotsVectorsCorrectly)

add_executable(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly tests/VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly.cpp)
add_test(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly)
