cmake_minimum_required(VERSION 3.16.3)

project(lapp)

enable_testing()

add_executable(MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne tests/MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne.cpp)
add_test(MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne)

add_executable(MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow tests/MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow.cpp)
add_test(MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow)

add_executable(MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow tests/MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow.cpp)
add_test(MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow)

add_executable(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly tests/VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly.cpp)
add_test(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly)

add_executable(VecopsDot_GivenCorrectInput_DotsVectorsCorrectly tests/VecopsDot_GivenCorrectInput_DotsVectorsCorrectly.cpp)
add_test(VecopsDot_GivenCorrectInput_AddsVectorsCorrectly VecopsDot_GivenCorrectInput_DotsVectorsCorrectly)

add_executable(VecopsScale_GivenCorrectInput_ScalesVectorCorrectly tests/VecopsScale_GivenCorrectInput_ScalesVectorCorrectly.cpp)
add_test(VecopsScale_GivenCorrectInput_ScalesVectorCorrectly VecopsScale_GivenCorrectInput_ScalesVectorCorrectly)

add_executable(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly tests/VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly.cpp)
add_test(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly)
