cmake_minimum_required(VERSION 3.16.3)

project(lapp VERSION 0.1 LANGUAGES CXX)

enable_testing()

add_executable(MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne tests/MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne.cpp)
add_test(MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne MatopsArgmaxAbsInCol_GivenAllZeroColumn_ReturnsNegativeOne)

add_executable(MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow tests/MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow.cpp)
add_test(MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow MatopsArgmaxAbsInCol_GivenCorrectInput_GivesCorrectRow)

add_executable(MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow tests/MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow.cpp)
add_test(MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow MatopsArgmaxAbsInCol_GivenCorrectInput_StartsAtCorrectRow)

add_executable(MatopsSolveLinearSystemInPlaceWithGaussianElimination_GivenCorrectInput_SolvesCorrectly tests/MatopsSolveLinearSystemInPlaceWithGaussianElimination_GivenCorrectInput_SolvesCorrectly.cpp)
add_test(MatopsSolveLinearSystemInPlaceWithGaussianElimination_GivenCorrectInput_SolvesCorrectly MatopsSolveLinearSystemInPlaceWithGaussianElimination_GivenCorrectInput_SolvesCorrectly)

add_executable(MatopsSwapRows_GivenCorrectInput_SwapsRowsCorrectly tests/MatopsSwapRows_GivenCorrectInput_SwapsRowsCorrectly.cpp)
add_test(MatopsSwapRows_GivenCorrectInput_SwapsRowsCorrectly MatopsSwapRows_GivenCorrectInput_SwapsRowsCorrectly)

add_executable(MatopsTransformInPlaceToUnreducedRowEchelonForm_GivenCorrectInput_TransformsCorrectly tests/MatopsTransformInPlaceToUnreducedRowEchelonForm_GivenCorrectInput_TransformsCorrectly.cpp)
add_test(MatopsTransformInPlaceToUnreducedRowEchelonForm_GivenCorrectInput_TransformsCorrectly MatopsTransformInPlaceToUnreducedRowEchelonForm_GivenCorrectInput_TransformsCorrectly)

add_executable(VecDot_GivenCorrectInput_DotsVectorsCorrectly tests/VecDot_GivenCorrectInput_DotsVectorsCorrectly.cpp)
add_test(VecDot_GivenCorrectInput_AddsVectorsCorrectly VecDot_GivenCorrectInput_DotsVectorsCorrectly)

add_executable(VecOperatorCompareEquality_GivenEqualVectors_ReturnsTrue tests/VecOperatorCompareEquality_GivenEqualVectors_ReturnsTrue.cpp)
add_test(VecOperatorCompareEquality_GivenEqualVectors_ReturnsTrue VecOperatorCompareEquality_GivenEqualVectors_ReturnsTrue)

add_executable(VecOperatorCompareEquality_GivenUnequalVectors_ReturnsFalse tests/VecOperatorCompareEquality_GivenUnequalVectors_ReturnsFalse.cpp)
add_test(VecOperatorCompareEquality_GivenUnequalVectors_ReturnsFalse VecOperatorCompareEquality_GivenUnequalVectors_ReturnsFalse)

add_executable(VecOperatorCompareInequality_GivenEqualVectors_ReturnsFalse tests/VecOperatorCompareInequality_GivenEqualVectors_ReturnsFalse.cpp)
add_test(VecOperatorCompareInequality_GivenEqualVectors_ReturnsFalse VecOperatorCompareInequality_GivenEqualVectors_ReturnsFalse)

add_executable(VecOperatorCompareInequality_GivenUnequalVectors_ReturnsTrue tests/VecOperatorCompareInequality_GivenUnequalVectors_ReturnsTrue.cpp)
add_test(VecOperatorCompareInequality_GivenUnequalVectors_ReturnsTrue VecOperatorCompareInequality_GivenUnequalVectors_ReturnsTrue)

add_executable(VecOperatorMinusEquals_GivenCorrectInput_SubtractsVectorsCorrectly tests/VecOperatorMinusEquals_GivenCorrectInput_SubtractsVectorsCorrectly.cpp)
add_test(VecOperatorMinusEquals_GivenCorrectInput_SubtractsVectorsCorrectly VecOperatorMinusEquals_GivenCorrectInput_SubtractsVectorsCorrectly)

add_executable(VecOperatorPlusEquals_GivenCorrectInput_AddsVectorsCorrectly tests/VecOperatorPlusEquals_GivenCorrectInput_AddsVectorsCorrectly.cpp)
add_test(VecOperatorPlusEquals_GivenCorrectInput_AddsVectorsCorrectly VecOperatorPlusEquals_GivenCorrectInput_AddsVectorsCorrectly)

add_executable(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly tests/VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly.cpp)
add_test(VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly VecopsAdd_GivenCorrectInput_AddsVectorsCorrectly)

add_executable(VecopsDot_GivenCorrectInput_DotsVectorsCorrectly tests/VecopsDot_GivenCorrectInput_DotsVectorsCorrectly.cpp)
add_test(VecopsDot_GivenCorrectInput_AddsVectorsCorrectly VecopsDot_GivenCorrectInput_DotsVectorsCorrectly)

add_executable(VecopsScale_GivenCorrectInput_ScalesVectorCorrectly tests/VecopsScale_GivenCorrectInput_ScalesVectorCorrectly.cpp)
add_test(VecopsScale_GivenCorrectInput_ScalesVectorCorrectly VecopsScale_GivenCorrectInput_ScalesVectorCorrectly)

add_executable(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly tests/VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly.cpp)
add_test(VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly VecopsSubtract_GivenCorrectInput_SubtractsVectorsCorrectly)

add_executable(VecSqrLen_GivenCorrectInput_ReturnsCorrectValue tests/VecSqrLen_GivenCorrectInput_ReturnsCorrectValue.cpp)
add_test(VecSqrLen_GivenCorrectInput_ReturnsCorrectValue VecSqrLen_GivenCorrectInput_ReturnsCorrectValue)
